[news] Use OSGi service to manage news downloads & storage
Change-Id: I5f364801c68791647d11c3b050a34a96843013e4
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>
Signed-off-by: Johannes Dorn <johannes.dorn@codetrails.com>